--- a/client/index.html
+++ b/client/index.html
@@ -12,15 +12,78 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js"
     integrity="sha512-zDvrqenA0eFJZCxBsryzUZcvihvNlEXbteMv62yRxdhR4s7K1aaz+LjsRyfk6M+YJLyAJEuuquIAI8I8GgLC8A=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <style>
+      *{
+        margin: 0;
+        box-sizing: border-box;
+      }
+      html {
+        width: 100%;
+        height: 100%;
+      }
+      #wrap {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      #wrap .container{
+        width: 80%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      #wrap .container .security_title{
+        margin-bottom: 30px;
+      }
+      #wrap .container .resultStr{
+        margin-bottom: 25px;
+        font-size: 1.2em;
+        font-weight: 700;
+      }
+      #wrap .container .input_sec{
+        width: 65%;
+        display: flex;
+        justify-content: space-between;
+      }
+      #wrap .container .input_sec:not(:last-child){
+        margin-bottom: 30px;
+      }
+      #wrap .container label{
+        width: 28%;
+      }
+      #wrap .container input {
+        width: 53%;
+      }
+      #wrap .container .input_sec button{
+        width: 13%;
+        background: none;
+        padding: 5px 10px;
+        border-radius: 10px;
+      }
+    </style>
 </head>
 
 <body>
-  <h2>웹 로컬스토리지 암&middot;복호화</h2>
-  <p class="resultStr">대기 중</p>
-  <input class="saveItem" type="name" />
-  <button class="saveBtn" type="button">저장</button>
-  <input class="loadItem" type="name" readonly/>
-  <button class="loadBtn" type="button">불러오기</button>
+  <div id="wrap">
+    <div class="container">
+      <h2 class="security_title">웹 로컬스토리지 암&middot;복호화</h2>
+      <p class="resultStr">상태: 대기 중</p>
+      <div class="input_sec">
+        <label>저장할 문구 입력 : </label>
+        <input class="saveItem" type="name" />
+        <button class="saveBtn" type="button">저장</button>
+      </div>
+      <div class="input_sec">
+        <label>저장된 파일 불러오기 : </label>
+        <input class="loadItem" type="name" readonly />
+        <button class="loadBtn" type="button">불러오기</button>
+      </div>
+    </div>
+  </div>
   <script>
     // 로컬스토리지 없을 경우, 생성
     if (!localStorage.getItem('salt')) {
@@ -164,7 +227,7 @@
               // 기존 해시값 + 난수 r2를 해싱 처리한 값과 서버로부터 받은 해시값 비교
               const existHash = CryptoJS.SHA3(sha3Hash + newRandomKey2, { outputLength: 256 }).toString(CryptoJS.enc.Hex);
               if (newR2Hash === existHash) {
-                resultStr.innerText = '웹페이지 신뢰 ok';
+                resultStr.innerText = '상태: 웹페이지 신뢰 ok';
 
                 /** 해시값의 원본 암호키 디코딩 */
                 const decryptCipher = CryptoJS.AES.decrypt(
@@ -178,7 +241,7 @@
                 );
                 return decryptCipher.toString(CryptoJS.enc.Utf8);
               } else {
-                resultStr.innerText = '웹페이지 신뢰 no';
+                resultStr.innerText = '상태: 웹페이지 신뢰 no';
               }
             } else {
               console.log(res.error);
