--- a/client/index.html
+++ b/client/index.html
@@ -275,12 +275,12 @@
           }
         })
           .then(response => response.json())
-          .then(res => {
+          .then(async res => {
             console.log('서버로부터 받은 새 암호키', res.newSecretKey);
             // 기존 해시 값 + 서버로부터 받은 새 암호키 => 새로운 해시값 생성
             const getNewSha3Hash = getHash2sha3(sha3Hash + res.newSecretKey, "");
 
-            getNewSha3Hash
+            await getNewSha3Hash
               .then(res => {
                 console.group('newHash & newSecretKey')
                 console.log('새 해시값 h(h(Dv||salt)||r1):', res);
@@ -290,14 +290,15 @@
                 alert('새 해시값 생성 실패');
                 return false;
               })
-              .finally(() => {
+              .finally(async () => {
                 newRandomKey2 = genRandomKey(); // 난수 r2 생성
                 console.log('난수 r2:', newRandomKey2);
                 console.groupEnd();
-                checkHash(sha3Hash, newHash, newRandomKey2).then(res => {
+                await checkHash(sha3Hash, newHash, newRandomKey2).then(res => {
                   if(!res){
                     return false;
                   } else {
+                    console.log(res);
                     originSecretKey = res;
                     console.log('originSecretKey:', originSecretKey);
                   };
@@ -339,11 +340,11 @@
 
     /** 암호키로 암호화 처리 후, 데이터 localStorage에 저장 */
     const saveLocalStorage = async (data) => {
-      if (!originSecretKey) {
-        console.log('암호키 필요');
-        return false;
-      };
       await verify().then(() => {
+        if (!originSecretKey) {
+          console.log('암호키 필요');
+          return false;
+        };
         const saveCipher = CryptoJS.AES.encrypt(
           data,
           CryptoJS.enc.Utf8.parse(originSecretKey),
@@ -361,27 +362,28 @@
     /** 암호키로 localStorage의 데이터 복호화 처리 후, load */
     const LoadLocalStorageData = async (saltItem) => {
       console.log('load salt item:', saltItem);
-      if (!originSecretKey) {
-        console.log('값이 잘못되었거나 암호키가 없음');
-        alert('값이 잘못되었거나 암호키가 없음');
-        loadInput.value = "";
-        return false;
-      } else if (!localStorage.getItem('enc(Data)')) {
-        console.log('저장된 값이 없음');
-        alert('값 저장 필요');
-        return false;
-      };
+      console.log(localStorage.getItem('enc(Data)'));
       const getHashData = await hashData(macAddr, serverPk, saltItem);
       if (!getHashData) {
         console.log('hash 생성 에러 발생');
         return false;
       } else {
-        console.log(getHashData);
         localStorage.setItem('encryptedId', getHashData); // 전달받은 id 로컬스토리지 저장
-
         // 인증 및 키 요청
-        verify().then(() => {
+        await verify().then(() => {
+          console.log(getHashData);
+          if (!originSecretKey) {
+            console.log('값이 잘못되었거나 암호키가 없음');
+            alert('값이 잘못되었거나 암호키가 없음');
+            loadInput.value = "";
+            return false;
+          } else if (!localStorage.getItem('enc(Data)')) {
+            console.log('저장된 값이 없음');
+            alert('값 저장 필요');
+            return false;
+          };
           let decryptedStr = null;
+          console.log(originSecretKey);
           const loadCipher = CryptoJS.AES.decrypt(
             localStorage.getItem('enc(Data)'),
             CryptoJS.enc.Utf8.parse(originSecretKey),
